últimos cambios desde rama master

--- a/index.html
+++ b/index.html
@@ -7,7 +7,12 @@
     <title>Tests with git</title>
 </head>
 <body>
-    <h1>El Blogpost</h1>
-    <p>Y un parrafo de inicio</p>
+
+    <main class="container" >
+        <h1>El Blogpost</h1>
+        <p>Y un parrafo de inicio</p>
+
+    </main>
+    
 </body>
 </html>
