Se agregan navbar desde rama cabecera

--- a/index.html
+++ b/index.html
@@ -8,6 +8,12 @@
 </head>
 <body>
 
+    <nav class="nav" >
+        <h3>Navegación</h3>
+        <button>Inicio</button>
+        <button>Tienda</button>
+        <button>Contacto</button>
+    </nav>
     <main class="container" >
         <h1>El Blogpost</h1>
         <p>Y un parrafo de inicio</p>
