--- a/index.html
+++ b/index.html
@@ -8,16 +8,19 @@
 </head>
 <body>
 
-    <nav class="nav" >
-        <h3>Navegación</h3>
-        <button>Inicio</button>
-        <button>Tienda</button>
-        <button>Contacto</button>
-    </nav>
+    <header>
+        <nav class="nav" >
+            <h3>Navegación</h3>
+            <button>Inicio</button>
+            <button>Tienda</button>
+            <button>Contacto</button>
+        </nav>
+
+    </header>
     <main class="container" >
         <h1>El Blogpost</h1>
         <p>Y un parrafo de inicio</p>
-
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat fugit corrupti, omnis tempora blanditiis excepturi quis explicabo autem est quae, animi quibusdam dicta recusandae obcaecati veniam, minima odit dolore maxime!</p>
     </main>
     
 </body>
