Listo el conflicto entre master y cabecera

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             <h3>Navegación</h3>
             <button>Inicio</button>
             <button>Tienda</button>
-            <button>Contacto</button>
+            <button>Como hacer una buena cabecera</button>
         </nav>
 
     </header>
