--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
     </header>
     <main class="container" >
-        <h1>El Blogpost</h1>
+        <h1>Mi Blogpost</h1>
         <p>Y un parrafo de inicio</p>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat fugit corrupti, omnis tempora blanditiis excepturi quis explicabo autem est quae, animi quibusdam dicta recusandae obcaecati veniam, minima odit dolore maxime!</p>
     </main>
