--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
         <p>Y un parrafo de inicio</p>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat fugit corrupti, omnis tempora blanditiis excepturi quis explicabo autem est quae, animi quibusdam dicta recusandae obcaecati veniam, minima odit dolore maxime!</p>
     </main>
-    
+
+    <script src="./app.js"></script>
 </body>
 </html>
